Update whitepaper and yellowpaper

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <span class="txt">Protocol for Abstract-Level Ledger Ecosystem</span></div>
                     <div class="small-title wow zoomIn animated" style="color:blue">IP Protocol for Future Internet of Values
                         <br>
-                        <a class="btn-white-paper" href="doc/PalletOne_whitepaper_zh-cn.pdf" style="float:left; margin-right:10px;">White Paper</a>
-                        <a class="btn-white-paper" href="doc/PalletOne_yellowpaper_zh-cn.pdf" style="float:left; margin-right:10px;">Yellow Paper</a>
+                        <a class="btn-white-paper" href="doc/PalletOne_whitepaper_en.pdf" style="float:left; margin-right:10px;">White Paper</a>
+                        <a class="btn-white-paper" href="doc/PalletOne_yellowpaper_en.pdf" style="float:left; margin-right:10px;">Yellow Paper</a>
                         <a class="btn-white-paper" href="doc/PalletOne_economy_whitepaper_zh-cn.pdf" style="float:left;width: 225px;">Economy White Paper</a></div>
                 </div>
             </div>
@@ -344,7 +344,7 @@
                             <br>
                             <span class="blue-txt">Co-Founder of PalletOne community</span></h4>
                         <div class="tex">
-                            <h2>Kenneth Che</h2>
+                            <h2>Kenneth Chen</h2>
                             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Co-Founder & CTO of GenieNRM Chief Strategy officer of TelTel Co-Founder & CTO of Datamite Technology 20 years experience in products design and management.</p>
                         </div>
                     </div>
