--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -382,7 +382,7 @@
                             <span class="blue-txt">PalletOne CMO</span></h4>
                         <div class="tex">
                             <h2>毛晓君</h2>
-                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中关村区块链产业联盟高级市场顾问，星环创世传（北京）媒科技有限公司CEO。法国雷恩高等商学院MSC管理学硕士。曾任职于北京邮电大学经济管理学院DBA办公室。</p>
+                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中关村区块链产业联盟高级市场顾问，星环创世传媒（北京）科技有限公司CEO。法国雷恩高等商学院MSC管理学硕士。曾任职于北京邮电大学经济管理学院DBA办公室。</p>
                         </div>
                     </div>
                 </div>
