Change investor style

--- a/index.html
+++ b/index.html
@@ -590,29 +590,31 @@
         </div>
         <div class="g-title">Investment Funds
             <br></div>
-        <div class="testimonials-text wow bounceIn animated">
-            <img src="images/yuandaoziben.png" height="120" width="135">
-            <img src="images/6.jpg" height="120" width="135">
-            <img src="images/5.jpg" height="120" width="135">
-            <img src="images/8.jpg" height="120" width="135">
-            <img src="images/7.png" height="120" width="135">
-            <img src="images/funds.png" height="120" width="135">
-            <img src="images/yinli.jpg" height="120" width="135">
-            <img src="images/hcapital.jpg" height="120" width="135">
-        </div>
-        <div class="testimonials-text wow bounceIn animated" style="margin: 10px auto;">
-            <img src="images/2.jpg" height="120" width="210">
-            <img src="images/3.jpg" height="120" width="230">
-            <img src="images/4.jpg" height="120" width="220">
-            <img src="images/bitrise.jpg" height="120" width="210">
-            <img src="images/linkvc.png" height="120" width="230">
-        </div>
-        <div class="testimonials-text wow bounceIn animated">
-            <img src="images/bwfund.jpg" height="120" width="230">
-            <img src="images/jiedian.png" height="120" width="400">
-            <img src="images/danhua.png" height="120" width="230">
-            <img src="images/genesis.jpg" height="120" width="240">
-        </div>
+            <div id="investor">
+                    <div id="box" class="testimonials-text wow bounceIn animated">
+                        <div style="background-image:url(images/yuandaoziben.png)"></div>
+                        <div style="background-image:url(images/funds.png)"></div>
+                        <div style="background-image:url(images/yinli.jpg)"></div>
+                        <div style="background-image:url(images/6.jpg)"></div>
+                        <div style="background-image:url(images/5.jpg)"></div>
+                        <div style="background-image:url(images/8.jpg)"></div>
+                        <div style="background-image:url(images/7.png)"></div>        
+                        <div style="background-image:url(images/hcapital.jpg)"></div>
+                    </div>
+                    <div id="rectangle" class="testimonials-text wow bounceIn animated">
+                        <div style="background-image:url(images/2.jpg)"></div>
+                        <div style="background-image:url(images/3.jpg)"></div>
+                        <div style="background-image:url(images/4.jpg)"></div>
+                        <div style="background-image:url(images/bitrise.jpg)"></div>
+                        <div style="background-image:url(images/linkvc.png)"></div>
+                    </div>
+                    <div id="rectangle2" class="testimonials-text wow bounceIn animated">
+                        <div style="background-image:url(images/bwfund.jpg)"></div>
+                        <div style="background-image:url(images/jiedian.png)"></div>
+                        <div style="background-image:url(images/danhua.png)"></div>
+                        <div style="background-image:url(images/genesis.jpg)"></div>
+                    </div>
+                </div>
         <div class="wrap1200 QA" id="QA">
             <div class="g-title">Frequently Asked Questions</div>
             <div class="row">
