--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/base.css" />
         <link rel="stylesheet" type="text/css" href="css/animate.min.css" />
         <link href="css/video-js.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/pc.css" />
+        <link rel="stylesheet" type="text/css" href="css/pc.css?update=1" />
         <style type="text/css">body,td,th { font-family: "Open Sans", helvetica, arial, sans-serif; } ui,#qq{display:inline}</style>
         <script>function browserRedirect() {
                 var sUserAgent = navigator.userAgent.toLowerCase();
