--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/animate.min.css" />
     <link href="css/video-js.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/pc.css" />
+    <link rel="stylesheet" type="text/css" href="css/pc.css?update=1" />
     <style type="text/css">
         body,
         td,
