--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -394,19 +394,20 @@
                         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne团队系统分析专家。前威睿科技联合创始人&CTO、TelTel首席战略官、Datamite Technology联合创始人&CTO。拥有二十年产品设计以及运营经验。</p>
                     </div>
                 </div>
+            </div>
                 <div class="col-sm-4 wow fadeInRight animated">
-                    <div class="team-member">
-                        <img src="images/maoxiaojun.png" class="img-responsive img-circle img-small" alt="">
-                        <h4>毛晓君
-                            <br>
-                            <span class="blue-txt">PalletOne CMO</span></h4>
-                        <div class="tex">
-                            <h2>毛晓君</h2>
-                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;中关村区块链产业联盟高级市场顾问，星环创世传媒（北京）科技有限公司CEO。法国雷恩高等商学院MSC管理学硕士。曾任职于北京邮电大学经济管理学院DBA办公室。</p>
+                <div class="team-member">
+                    <img src="images/liujian.png" class="img-responsive img-circle img-small" alt="">
+                    <h4>刘健
+                        <br>
+                        <span class="blue-txt">PalletOne团队系统分析专家</span>
+                    </h4>
+                    <div class="tex">
+                        <h2>刘健</h2>
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PalletOne团队系统分析专家。国防科技大学博士。长期从事操作系统，分布式计算，超级计算机等方面的开发和研究。</p>
                         </div>
                     </div>
                 </div>
-            </div>
             <div class="col-sm-4 wow fadeInLeft animated">
                 <div class="team-member">
                     <img src="images/chenyu.png" class="img-responsive img-circle img-small" alt="">
